--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>3ColorResume</title>
+    <title>Zai</title>
     <link href="http://kamsolutions.pl/projects/resume/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://kamsolutions.pl/projects/resume/css/font-awesome.css" rel="stylesheet">
     <link href="http://kamsolutions.pl/projects/resume/css/main.css" rel="stylesheet">
@@ -29,7 +29,7 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="img/avatar.jpg" alt="avatar">
+              <img src="zai.jpg" alt="avatar">
             </div>
             <div id="text-header">
               <h1>Hello,<br> my name is <span>Kamil</span><sup>24yo</sup> and this is my resume/cv</h1>
