--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <img src="zai.jpg" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Kamil</span><sup>24yo</sup> and this is my resume/cv</h1>
+              <h1>Hello,<br> my name is <span>Merwin Dale</span><sup>26yo</sup> and this is my resume/cv</h1>
             </div>
           </div>
         </div>
@@ -42,7 +42,9 @@
           <!-- ABOUT ME -->
           <div class="box">
             <h2>About Me</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, non, dolorem, cumque distinctio magni quam expedita velit laborum sunt amet facere tempora ut fuga aliquam ad asperiores voluptatem dolorum! Quasi.</p>
+            <p>
+            	Very technical in web development. And can work independently or in a team. I have a good understanding in object oriented and very adept in mvc framework. I also have an extensive experience in front end development and I'm good in laying out pages using  native css and html and also with the used of Twitter Bootstrap. Moveover, I'm knowledgeable in implementing web service api such as Facebook, Twitter, Google etc.
+            </p>
           </div>
           <!-- EDUCATION -->
           <div class="box">
@@ -51,7 +53,7 @@
               <li>
                 <div class="year pull-left">1990</div>
                 <div class="description pull-right">
-                  <h3>I was born in Katowice</h3>
+                  <h3>I was born in La Union</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, exercitationem, totam, dolores iste dolore est aut modi.</p>
                 </div>
               </li>
@@ -123,7 +125,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
               <div class="title pull-right">Facebook</div>
-              <div class="description pull-right">https://www.facebook.com/facebook</div>
+              <div class="description pull-right">https://www.facebook.com/merwindale</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
