Update font awesome

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Zai</title>
     <link href="bootstrap.min.css" rel="stylesheet">
-    <link href="font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="main.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -41,7 +41,7 @@
         <div class="col-xs-12 col-sm-7">
           <!-- ABOUT ME -->
           <div class="box">
-            <h2>About Me</h2>
+            <h2><i class="fa fa-user"></i> About Me</h2>
             <p>
             	Very technical in web development. And can work independently or in a team. I have a good understanding in object oriented and very adept in mvc framework. I also have an extensive experience in front end development and I'm good in laying out pages using  native css and html and also with the used of Twitter Bootstrap. Moveover, I'm knowledgeable in implementing web service api such as Facebook, Twitter, Google etc.
             </p>
@@ -82,24 +82,24 @@
           </div>
           <!-- EXPERIENCES -->
           <div class="box">
-            <h2>Experiences</h2>
+            <h2><i class="fa fa-leanpub"></i> Experiences</h2>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Google</div>
-                <div class="year">2013 - 2014</div>
+                <div class="where">Yondu</div>
+                <div class="year">Feb 2015 - Dec 2015</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Front-end developer / php programmer</div>
+                <div class="profession">Software Engineer</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, et, illum perferendis veritatis velit sunt similique qui magni totam harum tempore eius laboriosam accusantium necessitatibus voluptatum? Enim, itaque dignissimos quia.</div>
               </div>
             </div>
             <div class="job clearfix">
               <div class="col-xs-3">
-                <div class="where">Twitter</div>
-                <div class="year">2012</div>
+                <div class="where">Do-net Software</div>
+                <div class="year">Feb 2012 - Dec 2014</div>
               </div>
               <div class="col-xs-9">
-                <div class="profession">Web Developer</div>
+                <div class="profession">PHP Programmer</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil sit nemo voluptatem praesentium. Quia, qui facere consectetur libero asperiores fugiat consequuntur deserunt culpa repudiandae sed quidem voluptas explicabo soluta.</div>
               </div>
             </div>
@@ -108,7 +108,7 @@
         <div class="col-xs-12 col-sm-5">
           <!-- CONTACT -->
           <div class="box clearfix">
-            <h2>Contact</h2>
+            <h2><i class="fa fa-phone-square"></i> Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
               <div class="title only pull-right">500 345 242</div>
@@ -135,7 +135,7 @@
           </div>
           <!-- SKILLS -->
           <div class="box">
-            <h2>Skills</h2>
+            <h2><i class="fa fa-laptop"></i>Technical Skills</h2>
             <div class="skills">
               <div class="item-skills" data-percent="1.00">HTML</div>
               <div class="item-skills" data-percent="0.90">CSS</div>
@@ -152,7 +152,7 @@
           </div>
           <!-- LANGUAGES -->
           <div class="box">
-            <h2>Languages</h2>
+            <h2><i class="fa fa-language"></i> Languages</h2>
             <div id="language-skills">
               <div class="skill">Polish <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
               <div class="skill">English <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
