--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-51302339-1', 'kamsolutions.pl');
+      ga('create', 'UA-51302339-1', 'zaiblitz');
       ga('send', 'pageview');
     </script>
   </head>
@@ -67,15 +67,15 @@
               <li>
                 <div class="year pull-left">2009</div>
                 <div class="description pull-right">
-                  <h3>First level graduation in Graphic Design</h3>
-                  <p>Aspernatur, mollitia, quos maxime eius suscipit sed beatae ducimus quaerat quibusdam perferendis? Iusto, quibusdam asperiores unde repellat.</p>
+                  <h3>Saint Mary of The Sea Academy</h3>
+                  <p>Sto. Tomas La Union</p>
                 </div>
               </li>
               <li>
                 <div class="year pull-left">2012</div>
                 <div class="description pull-right">
-                  <h3>Second level graduation in Graphic Design</h3>
-                  <p>Ducimus, aliquam tempore autem itaque et accusantium!</p>
+                  <h3>Mapua Institute of Technology</h3>
+                  <p>Bachelor of Science in Information Technology</p>
                 </div>
               </li>
             </ul>
@@ -90,7 +90,11 @@
               </div>
               <div class="col-xs-9">
                 <div class="profession">Software Engineer</div>
-                <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam, et, illum perferendis veritatis velit sunt similique qui magni totam harum tempore eius laboriosam accusantium necessitatibus voluptatum? Enim, itaque dignissimos quia.</div>
+                <div class="description">
+                	 Developed a large scale web application called People Central that integrate timekeeping, attendance
+                	 and payroll system to simplify HR task.
+                </div>
+            	<div class="technology"> <span>Technology used:</span> PHP, HTML, GIT, CSS, Jquery, HTML, Codeigniter </div>
               </div>
             </div>
             <div class="job clearfix">
@@ -111,16 +115,16 @@
             <h2><i class="fa fa-phone-square"></i> Contact</h2>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-phone fa-fw"></span></div>
-              <div class="title only pull-right">500 345 242</div>
+              <div class="title only pull-right">+63977 325 500</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-envelope fa-fw"></span></div>
-              <div class="title only pull-right">office@kamsolutions.pl</div>
+              <div class="title only pull-right">merwindale.domingo@gmail.com</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-twitter fa-fw"></span></div>
               <div class="title pull-right">Twitter</div>
-              <div class="description pull-right">https://twitter.com/WordPress</div>
+              <div class="description pull-right">https://twitter.com/</div>
             </div>
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-facebook fa-fw"></span></div>
@@ -130,7 +134,7 @@
             <div class="contact-item">
               <div class="icon pull-left text-center"><span class="fa fa-skype fa-fw"></span></div>
               <div class="title pull-right">Skype</div>
-              <div class="description pull-right">kamsolutions.pl</div>
+              <div class="description pull-right">zaiblitz</div>
             </div>
           </div>
           <!-- SKILLS -->
@@ -161,8 +165,8 @@
           <!-- HOBBIES -->
           <div class="box">
             <h2>Hobbies</h2>
-            <div class="hobby">Photography</div>
-            <div class="hobby">Fitness</div>
+            <div class="hobby">Guitar</div>
+            <div class="hobby">Clash of clan</div>
             <div class="hobby">Programming</div>
           </div>
         </div>
@@ -194,8 +198,8 @@
 			window.onresize = function() {
 				clearTimeout(resize);
 				resize = setTimeout(function(){
-					callback();
-				}, 100);
+				callback();
+			}, 100);
 		};
     </script>
   </body>
