--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
               <li>
                 <div class="year pull-left">2005</div>
                 <div class="description pull-right">
-                  <h3>Secondary school specializing in artistic</h3>
-                  <p>Eos, explicabo, nam, tenetur et ab eius deserunt aspernatur ipsum ducimus quibusdam quis voluptatibus.</p>
+                  <h3>Sto. Tomas Central School</h3>
+                  <p>Sto. Tomas La Union</p>
                 </div>
               </li>
               <li>
@@ -83,6 +83,17 @@
           <!-- EXPERIENCES -->
           <div class="box">
             <h2><i class="fa fa-leanpub"></i> Experiences</h2>
+             <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">Tagcash</div>
+                <div class="year">April 2015 - Present</div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Programmer</div>
+                <div class="description"></div>
+                <div class="technology"> <span>Technology used:</span> PHP, HTML, GIT, CSS, Jquery, HTML, Codeigniter </div>
+              </div>
+            </div>
             <div class="job clearfix">
               <div class="col-xs-3">
                 <div class="where">Yondu</div>
@@ -94,7 +105,7 @@
                 	 Developed a large scale web application called People Central that integrate timekeeping, attendance
                 	 and payroll system to simplify HR task.
                 </div>
-            	<div class="technology"> <span>Technology used:</span> PHP, HTML, GIT, CSS, Jquery, HTML, Codeigniter </div>
+            	<div class="technology"> <span>Technology used:</span> PHP, MySQL, MongoDB, YII </div>
               </div>
             </div>
             <div class="job clearfix">
