--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Zai - Profile</title>
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
@@ -29,10 +29,10 @@
           <div id="photo-header" class="text-center">
             <!-- PHOTO (AVATAR) -->
             <div id="photo">
-              <img src="zai.jpg" alt="avatar">
+              <img src="images/zai.jpg" alt="avatar">
             </div>
             <div id="text-header">
-              <h1>Hello,<br> my name is <span>Merwin Dale</span><sup>26yo</sup> and this is my resume/cv</h1>
+              <h1>Hello,<br> my name is <span>Merwin</span><sup>26yo</sup> and this is my resume/cv</h1>
             </div>
           </div>
         </div>
@@ -115,7 +115,8 @@
               </div>
               <div class="col-xs-9">
                 <div class="profession">PHP Programmer</div>
-                <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam, nihil sit nemo voluptatem praesentium. Quia, qui facere consectetur libero asperiores fugiat consequuntur deserunt culpa repudiandae sed quidem voluptas explicabo soluta.</div>
+                <div class="description">Developed a web Sales Management system called Salico for our Japanese client</div>
+                <div class="technology"> <span>Technology used:</span> PHP, MySQL, SVN</div>
               </div>
             </div>
           </div>
@@ -154,7 +155,7 @@
             <div class="skills">
               <div class="item-skills" data-percent="1.00">HTML</div>
               <div class="item-skills" data-percent="0.90">CSS</div>
-              <div class="item-skills" data-percent="0.80">jQuery</div>
+              <div class="item-skills" data-percent="0.90">jQuery</div>
               <div class="item-skills" data-percent="0.75">PHP</div>
               <div class="item-skills" data-percent="0.80">Codeigniter</div>
               <div class="skills-legend clearfix">
@@ -169,8 +170,8 @@
           <div class="box">
             <h2><i class="fa fa-language"></i> Languages</h2>
             <div id="language-skills">
-              <div class="skill">Polish <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
-              <div class="skill">English <div class="icons pull-right"><div style="width: 60%;" class="icons-red"></div></div></div>
+              <div class="skill">English <div class="icons pull-right"><div style="width: 80%;" class="icons-red"></div></div></div>
+              <div class="skill">Tagalog <div class="icons pull-right"><div style="width: 90%;" class="icons-red"></div></div></div>
             </div>
           </div>
           <!-- HOBBIES -->
@@ -184,9 +185,9 @@
       </div>
     </div>
     <!-- JQUERY -->
-    <script src="jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- BOOTSTRAP -->
-    <script src="bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- SCRIPTS -->
     <script>
 		function callback() {
