--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/sidebar.css">
@@ -13,7 +14,7 @@
 
 	<nav class="navbar navbar-inverse">
 		<div class="container-fluid">
-			<!-- LOGO -->
+			<!-- LOGO -->	
 			<div class="navbar-header">
 				<!--
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mainNavBar">
