--- a/datatables.html
+++ b/datatables.html
@@ -4,8 +4,10 @@
 			   <div class="panel panel-primary">
 			      <div class="panel-heading" data-toggle="collapse" data-target="#tblServer">Datatable Server</div>
 			      <div class="panel-collapse collapse" id="tblServer">
-   			      	<div class="panel-body" >
+   			      	<div class="panel-body" > <!-- Data table -->
    			      		<pre>
+
+ var checkedRows = [];	   			      		
  $('#personTbl').DataTable({
         destroy: true,
         responsive : true,
