--- a/index2.html
+++ b/index2.html
@@ -92,7 +92,6 @@
 		</div>	
 
 		<div id="page-content-wrapper" class="loadData">
-			TEST
 		</div>
 	</div>
 </body>
@@ -104,7 +103,7 @@
 		//$('.loadData').load('../array.txt');
 		jQuery.get('../array.txt', function(data) {
 		   //process text file line by line
-		   //$('.loadData').html(data.replace('n',''));
+		   $('.loadData').html(data.replace('n',''));
 		});
 
 		// sidebar
