--- a/boss/index.html
+++ b/boss/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="A one page template very usefuly on any kind of website niche">
     <meta name="author" content="Bootstrap Wizard">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>EASY Template - Homepage</title>
+    <title>Fluke Calibration</title>
     <!-- Global -->
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -105,8 +105,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1 class="brand-heading"><span class="rotate">Customizable, Light Weight, Simple & Clean</span></h1>
-                    <p class="intro-text">We provide you easy themes to use</p>
+                    <h1 class="brand-heading"><span class="rotate">Precision, Performance, Confidence</span></h1>
+                    <p class="intro-text">All calibration services are performed according to customer requirements</p>
                     <div class="page-scroll">
                         <a href="#services" class="btn btn-square">
                             <i class="fa fa-angle-down"></i>
@@ -128,7 +128,7 @@
         <div class="section-header">
             <h1>services</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque imperdiet.</p>
+            <p>Keeping your world up and running®</p>
         </div>
 
         <div class="row">
@@ -138,8 +138,8 @@
                         <i class="fa fa-mobile"></i>
                     </div>
                     <div class="icon-box-info">
-                        <h4>Fully Responsive</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque.</p>
+                        <h4>Fluke Biomedical</h4>
+                        <p>Better products. More choices. One Company. </p>
                     </div>
                 </div>
             </div>
@@ -149,8 +149,8 @@
                         <i class="fa fa-cogs"></i>
                     </div>
                     <div class="icon-box-info">
-                        <h4>Easy To Customize</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque.</p>
+                        <h4>Fluke Calibration</h4>
+                        <p>Precision, performance, confidence.™</p>
                     </div>
                 </div>
             </div>
@@ -160,8 +160,8 @@
                         <i class="fa fa-heart"></i>
                     </div>
                     <div class="icon-box-info">
-                        <h4>Love This Template</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit Quisque rutrum pellentesque.</p>
+                        <h4>Fluke Networks</h4>
+                        <p>Networking solutions</p>
                     </div>
                 </div>
             </div>
@@ -239,7 +239,7 @@
         <div class="section-header">
             <h1>our works</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+            <p>We maintain a strict quality system with tight control of all aspects of testing and inspection from sample tracking and data management to equipment calibration and test methodologies.</p>
         </div>
 
         <div class="row wow fadeInUp showdelay2">
