--- a/boss/index.html
+++ b/boss/index.html
@@ -518,15 +518,15 @@
             </div>
 
             <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team2.jpg" alt="">
+                <img class="img-responsive" src="img/fluke/antonio.jpg" alt="" height="480" width="360">
                 <div class="team-social">
                     <a href="#"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="team-info">
-                    <h5>Jesica Doe</h5>
-                    <span class="position">Programmer</span>
+                    <h5>Antonio Estacio Jr.</h5>
+                    <span class="position">CEO</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
                 </div>
             </div>
