--- a/boss/index.html
+++ b/boss/index.html
@@ -57,8 +57,9 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/logo.png" alt="logo">
+                <a class="navbar-brand" href="index.html" style="padding-top:15px;font-size: 30px;font-weight: 100">
+                    <!--<img src="img/logo.png" alt="logo">-->
+                    FLUKE
                 </a>
             </div>
 
@@ -496,7 +497,8 @@
         <div class="section-header">
             <h1>our team</h1>
             <div class="divider-light"></div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
+            <p>The chemists, engineers, technicians and other technical experts at Fluke are always available to help find solutions to your most complex
+                testing needs or to provide advice, comments on industry trends or actionable tips.</p>
         </div>
 
 
@@ -504,15 +506,15 @@
         <div id="member" class="owl-carousel  wow fadeInUp showdelay2">
 
             <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team1.jpg" alt="">
+                <img class="img-responsive" src="img/fluke/alvin.jpg" alt="">
                 <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/alvin098"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="team-info">
-                    <h5>Steve Doe</h5>
-                    <span class="position">Web Designer</span>
+                    <h5>Alvin Bejar</h5>
+                    <span class="position">Engineer</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
                 </div>
             </div>
@@ -520,7 +522,7 @@
             <div class="team-box item">
                 <img class="img-responsive" src="img/fluke/antonio.jpg" alt="" height="480" width="360">
                 <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/antoniojr.estacio"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
@@ -532,29 +534,15 @@
             </div>
 
             <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team3.jpg" alt="">
+                <img class="img-responsive" src="img/fluke/christian.jpg" alt="">
                 <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.facebook.com/christian.geneta.37"><i class="fa fa-facebook"></i></a>
                     <a href="#"><i class="fa fa-twitter"></i></a>
                     <a href="#"><i class="fa fa-linkedin"></i></a>
                 </div>
                 <div class="team-info">
-                    <h5>Sheena Doe</h5>
-                    <span class="position">Flash Developer</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
-                </div>
-            </div>
-
-            <div class="team-box item">
-                <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/team1.jpg" alt="">
-                <div class="team-social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                </div>
-                <div class="team-info">
-                    <h5>Steve Doe</h5>
-                    <span class="position">Web Designer</span>
+                    <h5>Christian Geneta</h5>
+                    <span class="position">Sales Manager</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit.</p>
                 </div>
             </div>
@@ -756,18 +744,18 @@
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="single-blog.html">Read More...</a>
+                    <a href="#">Read More...</a>
                 </div>
             </div>
 
             <div class="blog-box item">
                 <img class="img-responsive" src="http://bootstrapwizard.info/Theme/EasyV2.0.1/img/demo/blog2.jpg" alt="">
                 <div class="blog-info">
-                    <h5>How to create effective blog</h5>
+                    <h5>On-site Calibration</h5>
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="single-blog.html">Read More...</a>
+                    <p>On-site calibration is a growing business for Fluke, as evidenced by the list of instruments recently added to the Lab’s calibration capabilities</p>
+                    <a href="#">Read More...</a>
                 </div>
             </div>
 
@@ -778,7 +766,7 @@
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="single-blog.html">Read More...</a>
+                    <a href="#">Read More...</a>
                 </div>
             </div>
 
@@ -789,7 +777,7 @@
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="single-blog.html">Read More...</a>
+                    <a href="#">Read More...</a>
                 </div>
             </div>
 
@@ -800,7 +788,7 @@
                     <span class="date"><i class="fa fa-clock-o"></i>15 April 2014</span>
                     <span class="comment"><i class="fa fa-comments"></i>15 comments</span>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing metus elit. Quisque rutrum pellentesque imperdiet.</p>
-                    <a href="single-blog.html">Read More...</a>
+                    <a href="#">Read More...</a>
                 </div>
             </div>
 
